--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-node_modules
-.pnp
+/node_modules
+/.pnp
 .pnp.js
 
 # compiled
@@ -15,11 +15,14 @@ TEST*.xml
 *.iml
 
 # production
-.idea
-.next
-out
-build
-gen
+/.yalc
+/.vercel
+/.idea
+/.next
+/out
+/build
+/dist
+/gen
 
 # misc
 .DS_Store
@@ -38,9 +41,6 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
-
-# vercel
-.vercel
 
 # bundle applications
 *.app
