--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,8 @@
     "noUnusedParameters": true,
     "noUncheckedIndexedAccess": true,
     "strictNullChecks": true,
-    "jsx": "react",
-    "allowJs": true,
+    "jsx": "react-jsx",
+    "allowJs": false,
     "checkJs": false,
     "declaration": true,
     "declarationMap": true,
