--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@ibnlanre/portal",
   "version": "0.0.2",
   "description": "React state management library based on RxJS Behavior Subject",
-  "main": "dist/index.js",
+  "main": "dist/index.mjs",
   "files": [
     "dist"
   ],
