--- a/package.json
+++ b/package.json
@@ -53,6 +53,10 @@
   },
   "homepage": "https://github.com/ibnlanre/portal#readme",
   "license": "MIT",
+  "peerDependencies": {
+    "react": "^16.8.0 || ^17 || ^18",
+    "react-dom": "^16.8.0 || ^17 || ^18"
+  },
   "devDependencies": {
     "@swc/core": "^1.3.61",
     "@types/node": "^20.2.3",
