--- a/package.json
+++ b/package.json
@@ -54,19 +54,14 @@
   "homepage": "https://github.com/ibnlanre/portal#readme",
   "license": "MIT",
   "peerDependencies": {
-    "react": "^16.8.0 || ^17 || ^18",
-    "react-dom": "^16.8.0 || ^17 || ^18"
+    "react": "^16.8",
+    "react-dom": "^16.8"
   },
   "devDependencies": {
     "@swc/core": "^1.3.61",
     "@types/node": "^20.2.3",
     "@types/react": "^18.2.6",
-    "react-dom": "^18.1.0",
     "tsup": "^6.7.0",
     "typescript": "^5.0.4"
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "rxjs": "^7.8.1"
   }
 }
