--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ibnlanre/portal",
-  "version": "0.5.1",
+  "version": "0.5.2",
   "description": "React state management library based on RxJS Behavior Subject",
   "main": "dist/index",
   "files": [
@@ -40,8 +40,14 @@
     "package": "yarn build & yarn publish --access public"
   },
   "keywords": [
+    "web",
+    "front-end",
+    "react",
+    "hooks",
+    "typescript",
     "state",
-    "context"
+    "context",
+    "portal"
   ],
   "repository": {
     "type": "git",
