--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ibnlanre/portal",
-  "version": "0.6.3",
+  "version": "0.6.4",
   "description": "React state management library based on RxJS Behavior Subject",
   "main": "dist/index",
   "files": [
@@ -37,7 +37,8 @@
   },
   "scripts": {
     "build": "tsup",
-    "package": "yarn build & yarn publish --access public"
+    "package": "yarn build & yarn publish --access public",
+    "test": "jest --config jest.config.ts"
   },
   "keywords": [
     "web",
@@ -68,9 +69,16 @@
     "react-dom": "^16.8"
   },
   "devDependencies": {
+    "@jest/globals": "^29.6.1",
     "@swc/core": "^1.3.61",
     "@types/node": "^20.2.3",
-    "@types/react": "^18.2.6",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "jest": "^29.6.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
     "tsup": "^6.7.0",
     "typescript": "^5.0.4"
   }
