--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   },
   "scripts": {
     "build": "tsup",
-    "package": "yarn build & npm publish --access public",
+    "package": "yarn build & yarn publish --access public",
     "test": "jest --config jest.config.ts"
   },
   "keywords": [
