--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
   "scripts": {
     "build": "tsup",
     "package": "yarn build & yarn publish --access public",
-    "test": "jest --config jest.config.ts"
+    "test": "jest --config jest.config.ts",
+    "lint": "tsc --pretty --noEmit --project tsconfig-test.json"
   },
   "keywords": [
     "web",
