--- a/.gitignore
+++ b/.gitignore
@@ -1,58 +1,6 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
 
-# compiled
-*.py[cod]
-*.class
-
-# testing
-coverage
-TEST*.xml
-*.iml
-
-# production
-/.yalc
-/.vercel
-/.idea
-/.next
-/out
-/build
-/dist
-/gen
-
-# misc
-.DS_Store
-*.pem
-Thumbs.db
-
-# debug
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# local env files
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# bundle applications
-*.app
-*.jar
-*.war
-*.app
-*.zip
-
-# large media files
-*.mp4
-*.tiff
-*.avi
-*.flv
-*.mov
-*.wmv
+# build
+esm
+cjs
