--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "lint": "tsc --pretty --noEmit --project tsconfig-test.json",
     "package": "yarn build & yarn publish --access public",
     "test": "jest --config jest.config.ts",
-    "build": "tsup"
+    "build": "yarn esm-bundle && yarn cjs-bundle"
   },
   "keywords": [
     "web",
