--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ibnlanre/portal",
-  "version": "2.3.1",
+  "version": "3.0.0-beta",
   "description": "React state management library",
   "main": "cjs/index.js",
   "module": "esm/index.js",
