initial changes to use-portal

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noUncheckedIndexedAccess": true,
+    "forceConsistentCasingInFileNames": true,
     "strictNullChecks": true,
     "jsx": "react-jsx",
     "allowJs": false,
@@ -25,6 +26,10 @@
     "emitDeclarationOnly": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "baseUrl": "./src",
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
+    }
   }
 }
