--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "scripts": {
     "lint": "tsc --pretty --noEmit --project tsconfig-test.json",
     "test": "jest --config jest.config.ts",
+    "vitest": "vitest",
     "esm-bundle": "tsup --config tsup.esm.ts",
     "cjs-bundle": "tsup --config tsup.cjs.ts",
     "build": "yarn esm-bundle & yarn cjs-bundle",
@@ -62,15 +63,19 @@
   "devDependencies": {
     "@jest/globals": "^29.6.1",
     "@swc/core": "^1.3.61",
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/node": "^20.2.3",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "jest": "^29.6.1",
+    "jsdom": "^22.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "tsup": "^6.7.0",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "vitest": "^0.34.6",
+    "@testing-library/react": "^14.1.0"
   }
 }
