--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ibnlanre/portal",
-  "version": "3.17.0-beta",
+  "version": "3.18.0-beta",
   "description": "React state management library",
   "main": "cjs/index.js",
   "module": "esm/index.js",
@@ -64,6 +64,7 @@
   "devDependencies": {
     "@jest/globals": "^29.6.1",
     "@swc/core": "^1.3.61",
+    "@testing-library/react": "^14.1.0",
     "@testing-library/react-hooks": "^8.0.1",
     "@types/node": "^20.2.3",
     "@types/react": "^18.2.14",
@@ -76,7 +77,6 @@
     "ts-node": "^10.9.1",
     "tsup": "^6.7.0",
     "typescript": "^5.0.4",
-    "vitest": "^0.34.6",
-    "@testing-library/react": "^14.1.0"
+    "vitest": "^0.34.6"
   }
 }
