--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "scripts": {
     "lint": "tsc --pretty --noEmit --project tsconfig.json",
     "test": "jest --config jest.config.ts",
-    "vitest": "vitest",
+    "vitest": "vitest -- --typecheck",
     "esm-bundle": "tsup --config tsup.esm.ts",
     "cjs-bundle": "tsup --config tsup.cjs.ts",
     "build": "yarn esm-bundle & yarn cjs-bundle",
