--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
   },
   "scripts": {
     "lint": "tsc --pretty --noEmit --project tsconfig.json",
-    "test": "jest --config jest.config.ts",
-    "vitest": "vitest -- --typecheck",
+    "test": "vitest -- --typecheck",
     "esm-bundle": "tsup --config tsup.esm.ts",
     "cjs-bundle": "tsup --config tsup.cjs.ts",
     "build": "yarn esm-bundle & yarn cjs-bundle",
@@ -65,11 +64,9 @@
     "@jest/globals": "^29.6.1",
     "@swc/core": "^1.3.61",
     "@testing-library/react": "^14.1.0",
-    "@testing-library/react-hooks": "^8.0.1",
     "@types/node": "^20.2.3",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
-    "jest": "^29.6.1",
     "jsdom": "^22.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
