--- a/package.json
+++ b/package.json
@@ -32,19 +32,19 @@
     "package": "yarn publish --access public"
   },
   "keywords": [
-    "web",
-    "front-end",
-    "react",
-    "hooks",
-    "typescript",
+    "redux",
     "state",
     "manager",
     "management",
     "context",
     "store",
+    "query",
+    "react",
+    "hooks",
+    "typescript",
+    "front-end",
     "portal",
-    "redux",
-    "use-portal"
+    "web"
   ],
   "repository": {
     "type": "git",
@@ -61,8 +61,6 @@
     "react-dom": ">16.7"
   },
   "devDependencies": {
-    "@jest/globals": "^29.6.1",
-    "@swc/core": "^1.3.61",
     "@testing-library/react": "^14.1.0",
     "@types/node": "^20.2.3",
     "@types/react": "^18.2.14",
@@ -70,7 +68,6 @@
     "jsdom": "^22.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "tsup": "^6.7.0",
     "typescript": "^5.0.4",
