Refactor cookie management and introduce new type utilities

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ibnlanre/portal",
-  "version": "3.24.0-beta",
+  "version": "4.0.0",
   "description": "React state management library",
   "main": "cjs/index.js",
   "module": "esm/index.js",
@@ -11,29 +11,6 @@
     "node": ">=14"
   },
   "types": "./dist/index.d.mts",
-  "exports": {
-    ".": "./dist/index.js",
-    "./package.json": "./package.json",
-    "./components": {
-      "import": "./dist/components/index.js",
-      "types": "./dist/components/index.d.mts"
-    },
-    "./hooks": {
-      "import": "./dist/hooks/index.js",
-      "types": "./dist/hooks/index.d.mts"
-    },
-    "./*": {
-      "import": "./dist/*.mjs",
-      "types": "./dist/*.d.mts"
-    }
-  },
-  "typesVersions": {
-    "*": {
-      "hooks": [
-        "./dist/hooks/index.d.mts"
-      ]
-    }
-  },
   "scripts": {
     "lint": "tsc --pretty --noEmit --project tsconfig.json",
     "test": "vitest -- --typecheck",
@@ -45,23 +22,16 @@
   "keywords": [
     "redux",
     "state",
-    "manager",
-    "management",
-    "context",
-    "store",
-    "query",
-    "react",
-    "hooks",
-    "typescript",
-    "front-end",
-    "portal",
-    "web"
+    "store"
   ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ibnlanre/portal.git"
   },
-  "author": "Ridwan Olanrewaju <olaitanlanre28@gmail.com>",
+  "author": {
+    "name": "Ridwan Olanrewaju",
+    "email": "olaitanlanre28@gmail.com"
+  },
   "bugs": {
     "url": "https://github.com/ibnlanre/portal/issues"
   },
@@ -71,21 +41,21 @@
     "react": ">16.7",
     "react-dom": ">16.7"
   },
-  "devDependencies": {
-    "@testing-library/jest-dom": "^6.2.0",
-    "@testing-library/react": "^14.1.0",
-    "@types/node": "^20.2.3",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
-    "jsdom": "^22.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "ts-node": "^10.9.1",
-    "tsup": "^6.7.0",
-    "typescript": "^5.0.4",
-    "vitest": "^0.34.6"
-  },
   "dependencies": {
-    "@vitejs/plugin-react": "^4.2.1"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^14.3.1",
+    "@types/node": "^20.17.10",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "@vitejs/plugin-react": "^4.3.4",
+    "jsdom": "^22.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "ts-node": "^10.9.2",
+    "tsup": "^6.7.0",
+    "typescript": "^5.7.2",
+    "vitest": "^0.34.6"
   }
 }
