--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": ">16.7"
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^14.3.1",
     "@types/node": "^20.17.10",
