--- a/package.json
+++ b/package.json
@@ -49,12 +49,12 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
-    "jsdom": "^22.1.0",
+    "happy-dom": "^16.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "ts-node": "^10.9.2",
     "tsup": "^6.7.0",
     "typescript": "^5.7.2",
-    "vitest": "^0.34.6"
+    "vitest": "^2.1.8"
   }
 }
