--- a/package.json
+++ b/package.json
@@ -1,47 +1,11 @@
 {
-  "name": "@ibnlanre/portal",
-  "version": "4.0.0",
-  "description": "React state management library",
-  "main": "cjs/index.js",
-  "module": "esm/index.js",
-  "files": [
-    "dist/*"
-  ],
-  "engines": {
-    "node": ">=14"
-  },
-  "types": "./dist/index.d.mts",
   "scripts": {
-    "lint": "tsc --pretty --noEmit --project tsconfig.json",
-    "test": "vitest -- --typecheck",
-    "esm-bundle": "tsup --config tsup.esm.ts",
-    "cjs-bundle": "tsup --config tsup.cjs.ts",
-    "build": "yarn esm-bundle & yarn cjs-bundle",
-    "package": "yarn publish --access public"
-  },
-  "keywords": [
-    "redux",
-    "state",
-    "store"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ibnlanre/portal.git"
-  },
-  "author": {
-    "name": "Ridwan Olanrewaju",
-    "email": "olaitanlanre28@gmail.com"
-  },
-  "bugs": {
-    "url": "https://github.com/ibnlanre/portal/issues"
-  },
-  "homepage": "https://github.com/ibnlanre/portal#readme",
-  "license": "MIT",
-  "peerDependencies": {
-    "react": ">16.7",
-    "react-dom": ">16.7"
+    "lint": "biome lint --write .",
+    "ts-lint": "tsc --pretty --noEmit --project tsconfig.json",
+    "test": "vitest --typecheck"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.9.4",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^14.3.1",
@@ -53,7 +17,6 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "ts-node": "^10.9.2",
-    "tsup": "^6.7.0",
     "typescript": "^5.7.2",
     "vitest": "^2.1.8"
   }
