--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "target": "es2015",
+    "target": "ES2017",
     "module": "ES2022",
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
