--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ibnlanre/portal",
-  "version": "4.0.0",
+  "version": "4.0.1",
   "description": "React state management library",
   "scripts": {
     "bundle": "tsup --config tsup.config.ts",
@@ -8,19 +8,19 @@
     "dry-run": "npm pack --dry-run"
   },
   "files": [
-    "dist/*"
+    "dist"
   ],
-  "module": "./esm/index.js",
-  "main": "./cjs/index.js",
+  "module": "./dist/esm/index.js",
+  "main": "./dist/cjs/index.js",
   "exports": {
     ".": {
       "import": {
-        "types": "./esm/index.d.ts",
-        "default": "./esm/index.js"
+        "types": "./dist/esm/index.d.ts",
+        "default": "./dist/esm/index.js"
       },
       "require": {
-        "types": "./cjs/index.d.ts",
-        "default": "./cjs/index.js"
+        "types": "./dist/cjs/index.d.ts",
+        "default": "./dist/cjs/index.js"
       }
     }
   },
