--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "bugs": {
     "url": "https://github.com/ibnlanre/portal/issues"
   },
-  "homepage": "https://github.com/ibnlanre/portal#readme",
+  "homepage": "https://ibnlanre.github.io/portal/",
   "peerDependencies": {
     "react": ">16.7",
     "react-dom": ">16.7"
