feat: Enhance createCompositeStore with deep partial updates and derived state handling
- Added support for deep partial updates in createCompositeStore, allowing nested state modifications via the $use hook.
- Introduced tests to validate deep updates and derived state scenarios, ensuring reactivity and correctness.
- Implemented a normalizeObject function to handle object normalization, including circular references and function stripping.
- Added comprehensive tests for normalizeObject to cover various edge cases, including nested objects and non-object inputs.
- Improved type safety across the store types, ensuring better integration with TypeScript.
- Introduced WidenLiterals type utility to handle literal widening in store value resolution.
- Enhanced Paths type to prevent undefined paths in partial objects and handle complex nested structures.
- Updated index.ts to export new types and functions for better accessibility.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,6 @@
     "source.addMissingImports.ts": "always",
     "source.removeUnusedImports": "explicit"
   },
-  "css.customData": [".vscode/tailwind.json"]
+  "css.customData": [".vscode/tailwind.json"],
+  "typescript.experimental.useTsgo": false
 }
