Refactor code structure for improved readability and maintainability

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,9 +6,9 @@
   "editor.detectIndentation": false,
   "editor.tabSize": 2,
   "editor.codeActionsOnSave": {
-    "source.sortImports": "always",
     "source.addMissingImports.ts": "always",
-    "source.removeUnusedImports": "explicit"
+    "source.removeUnusedImports": "explicit",
+    "source.fixAll.eslint": "always"
   },
   "css.customData": [".vscode/tailwind.json"],
   "typescript.experimental.useTsgo": false
