chore: Update package.json scripts for changelog generation and commit handling

--- a/package.json
+++ b/package.json
@@ -83,27 +83,28 @@
     "bundle": "tsup --config tsup.config.ts",
     "commit": "git add .",
     "coverage": "vitest run --coverage --typecheck",
-    "dry-run": "npm publish --dry-run --no-git-checks",
+    "dry-run": "pnpm publish --dry-run --no-git-checks",
     "eslint": "eslint --fix .",
+    "first-release": "standard-changelog --first-release",
     "lint": "biome lint --write .",
-    "major": "npm version major",
-    "minor": "npm version minor",
-    "package": "npm publish --access public",
-    "patch": "npm version patch",
-    "postcommit": "git commit --message $npm_package_version",
+    "major": "pnpm version major",
+    "minor": "pnpm version minor",
+    "package": "pnpm publish --access public",
+    "patch": "pnpm version patch",
     "postpack": "git push",
     "postpublish": "git push --tags",
-    "posttest": "git pull",
-    "postversion": "npm publish --access public",
-    "pre-major": "npm version premajor",
-    "pre-minor": "npm version preminor",
-    "pre-patch": "npm version prepatch",
-    "precommit": "standard-changelog",
-    "prepublishOnly": "npm run bundle",
-    "pretest": "npm run typecheck",
+    "posttest": "pnpm run eslint",
+    "postversion": "pnpm publish --access public",
+    "pre-major": "pnpm version premajor",
+    "pre-minor": "pnpm version preminor",
+    "pre-patch": "pnpm version prepatch",
+    "precommit": "standard-changelog --releaseCount 0",
+    "prepublishOnly": "pnpm run bundle",
+    "pretest": "pnpm run typecheck",
+    "preversion": "pnpm run test",
     "test": "vitest run --typecheck",
     "typecheck": "tsc --pretty --noEmit",
-    "version": "npm run commit"
+    "version": "pnpm run commit"
   },
   "version": "4.0.1"
 }
