--- a/package.json
+++ b/package.json
@@ -6,20 +6,20 @@
   "bugs": {
     "url": "https://github.com/ibnlanre/portal/issues"
   },
-  "description": "React state management library",
+  "description": "A simple, lightweight and flexible state management library for React applications.",
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@eslint-react/eslint-plugin": "^1.52.2",
     "@stylistic/eslint-plugin": "^4.4.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^14.3.1",
-    "@types/node": "^20.17.10",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
+    "@testing-library/react": "^16.3.0",
+    "@types/node": "^24.0.3",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "@typescript-eslint/parser": "^8.34.1",
-    "@vitejs/plugin-react": "^4.3.4",
-    "@vitest/coverage-v8": "2.1.8",
+    "@vitejs/plugin-react": "^4.5.2",
+    "@vitest/coverage-v8": "3.2.3",
     "@vitest/eslint-plugin": "^1.2.7",
     "eslint": "^9.29.0",
     "eslint-import-resolver-typescript": "^4.4.3",
@@ -28,20 +28,23 @@
     "eslint-plugin-only-warn": "^1.1.0",
     "eslint-plugin-paths": "^1.1.0",
     "eslint-plugin-perfectionist": "^4.14.0",
-    "eslint-plugin-prettier": "^5.4.1",
+    "eslint-plugin-prettier": "^5.5.0",
     "eslint-plugin-react-redux": "^4.2.2",
     "eslint-plugin-risxss": "^2.1.0",
-    "eslint-plugin-storybook": "^9.0.10",
+    "eslint-plugin-storybook": "^9.0.11",
     "globals": "^16.2.0",
-    "happy-dom": "^16.0.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "happy-dom": "^18.0.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "standard-changelog": "^7.0.1",
+    "storybook": "^9.0.11",
     "ts-node": "^10.9.2",
-    "tsup": "^8.3.5",
-    "typescript": "^5.7.3",
+    "tsup": "^8.5.0",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^8.34.1",
-    "vitest": "^2.1.8"
+    "vite": "^6.3.5",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.2.3"
   },
   "engines": {
     "node": ">=14"
