--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "description": "A simple, lightweight and flexible state management library for React applications.",
   "devDependencies": {
+    "@arethetypeswrong/cli": "^0.18.2",
     "@biomejs/biome": "^1.9.4",
     "@eslint-react/eslint-plugin": "^1.52.2",
     "@stylistic/eslint-plugin": "^4.4.1",
@@ -88,6 +89,7 @@
     "minor": "npm version minor",
     "package": "npm publish --access public",
     "patch": "npm version patch",
+    "postbundle": "attw --pack .",
     "postpack": "git push",
     "postpublish": "git push --tags",
     "posttest": "npm run eslint",
