--- a/examples/indexeddb-with-dexie/package.json
+++ b/examples/indexeddb-with-dexie/package.json
@@ -1,13 +1,24 @@
 {
   "dependencies": {
-    "@ibnlanre/portal": "^5",
-    "dexie": "^4.0.11"
+    "@ibnlanre/portal": "^5.0.4",
+    "dexie": "^4.0.11",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.2"
   },
   "description": "Example of using createStore with IndexedDB via Dexie",
   "devDependencies": {
-    "@types/node": "^20.0.0",
-    "typescript": "^5.0.0",
-    "vite": "^5.0.0"
+    "@tailwindcss/vite": "^4.1.11",
+    "@types/node": "^24.0.4",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@vitejs/plugin-react": "^4.6.0",
+    "@vitejs/plugin-react-swc": "^3.10.2",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.10",
+    "typescript": "^5.8.3",
+    "vite": "^6.3.5"
   },
   "name": "indexeddb-with-dexie-example",
   "scripts": {
