--- a/examples/indexeddb-with-dexie/tsconfig.json
+++ b/examples/indexeddb-with-dexie/tsconfig.json
@@ -19,6 +19,6 @@
       "@/*": ["../../*"]
     }
   },
-  "include": ["*.ts", "*.tsx"],
+  "include": ["*.ts", "*.tsx", "src/**/*"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
