chore: update workspace configuration and TypeScript settings
- Added pnpm workspace configuration to exclude test packages.
- Modified tsconfig.json to disable unchecked indexed access and updated include/exclude paths.
- Refactored tsup.config.ts to simplify build configuration, targeting ES2015 and removing legacy output.
- Updated vitest.config.mts to enhance test exclusion patterns.

--- a/examples/indexeddb-with-dexie/tsconfig.json
+++ b/examples/indexeddb-with-dexie/tsconfig.json
@@ -14,9 +14,10 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
+    "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["../../*"]
+      "@/*": ["./src/*"],
     }
   },
   "include": ["*.ts", "*.tsx", "src/**/*"],
