--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@biomejs/biome": "^1.9.4",
     "@eslint-react/eslint-plugin": "^1.52.2",
     "@stylistic/eslint-plugin": "^4.4.1",
+    "@tailwindcss/vite": "^4.1.11",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -20,7 +21,8 @@
     "@types/react-dom": "^19.1.6",
     "@typescript-eslint/parser": "^8.34.1",
     "@vitejs/plugin-react": "^4.5.2",
-    "@vitest/coverage-v8": "3.2.3",
+    "@vitejs/plugin-react-swc": "^3.10.2",
+    "@vitest/coverage-v8": "3.2.4",
     "@vitest/eslint-plugin": "^1.2.7",
     "eslint": "^9.29.0",
     "eslint-import-resolver-typescript": "^4.4.3",
@@ -39,23 +41,24 @@
     "react-dom": "^19.1.0",
     "standard-changelog": "^7.0.1",
     "storybook": "^9.0.11",
+    "tailwindcss": "^4.1.11",
     "ts-node": "^10.9.2",
     "tsup": "^8.5.0",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.34.1",
     "vite": "^6.3.5",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.2.3"
+    "vitest": "^3.2.4"
   },
   "engines": {
     "node": ">=14"
   },
   "exports": {
-    ".": {
-      "import": "./dist/esm/index.js",
-      "require": "./dist/cjs/index.js"
-    }
+    "import": "./dist/index.js",
+    "require": "./dist/index.cjs"
   },
+  "type": "module",
+  "types": "./dist/index.d.ts",
   "files": [
     "dist"
   ],
@@ -66,8 +69,8 @@
     "store"
   ],
   "license": "BSD-3-Clause",
-  "main": "./dist/cjs/index.js",
-  "module": "./dist/esm/index.js",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
   "name": "@ibnlanre/portal",
   "peerDependencies": {
     "react": ">16.7",
@@ -79,6 +82,7 @@
   },
   "scripts": {
     "bundle": "tsup --config tsup.config.ts",
+    "check-exports": "attw --pack .",
     "commit": "git add .",
     "coverage": "vitest run --coverage --typecheck",
     "dry-run": "npm publish --dry-run --no-git-checks",
@@ -89,7 +93,7 @@
     "minor": "npm version minor",
     "package": "npm publish --access public",
     "patch": "npm version patch",
-    "postbundle": "attw --pack .",
+    "postbundle": "npm run check-exports",
     "postpack": "git push",
     "postpublish": "git push --tags",
     "posttest": "npm run eslint",
