Refactor and enhance code structure across multiple modules
- Updated import statements for consistency and clarity in `unsign-cookie.error.test.ts`, `constant-time-compare.test.ts`, and `create-hmac.test.ts`.
- Moved utility functions in `create-hmac/index.ts` for better organization and readability.
- Added `AsyncBrowserStorageTransforms` interface to `async-browser-storage-adapter` for improved data transformation capabilities.
- Created comprehensive tests for `InferType` in `infer-type/index.test.ts` to ensure type inference works correctly for both `CompositeStore` and `PrimitiveStore`.
- Adjusted `PrimitiveStore` definition to use a type instead of an interface for better flexibility.
- Updated ESLint configuration to streamline rules and improve code quality checks.
- Refined example application structure in `indexeddb-with-dexie` for better organization and clarity.
- Enhanced user experience in the `Counter`, `Preferences`, `TodoList`, and `UserProfile` components by improving button accessibility and layout.
- Fixed various minor bugs and improved type safety across the codebase.

--- a/examples/indexeddb-with-dexie/tsconfig.json
+++ b/examples/indexeddb-with-dexie/tsconfig.json
@@ -1,24 +1,24 @@
 {
   "compilerOptions": {
-    "target": "ES2022",
+    "allowImportingTsExtensions": true,
+    "baseUrl": ".",
+    "forceConsistentCasingInFileNames": true,
+    "isolatedModules": true,
+    "jsx": "react-jsx",
     "lib": ["ES2022", "DOM", "DOM.Iterable"],
     "module": "ESNext",
-    "skipLibCheck": true,
     "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
-    "strict": true,
+    "noFallthroughCasesInSwitch": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
-    "forceConsistentCasingInFileNames": true,
-    "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
-    }
+    },
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "target": "ES2022"
   },
   "include": ["*.ts", "*.tsx", "src/**/*"],
   "references": [{ "path": "./tsconfig.node.json" }]
