--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,32 +1,32 @@
 {
   "compilerOptions": {
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "target": "ES2017",
-    "module": "ES2022",
-    "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true,
-    "verbatimModuleSyntax": true,
-    "strict": true,
-    "noImplicitAny": true,
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noUncheckedIndexedAccess": false,
-    "forceConsistentCasingInFileNames": true,
-    "strictNullChecks": true,
     "allowJs": false,
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": ".",
     "checkJs": false,
     "declaration": true,
     "declarationMap": true,
     "emitDeclarationOnly": true,
     "esModuleInterop": true,
-    "skipLibCheck": true,
-    "baseUrl": ".",
+    "forceConsistentCasingInFileNames": true,
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "module": "ES2022",
+    "moduleResolution": "node",
+    "noImplicitAny": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noUncheckedIndexedAccess": false,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "paths": {
       "@/*": ["./*"],
-    }
+    },
+    "skipLibCheck": true,
+    "strict": true,
+    "strictNullChecks": true,
+    "target": "ES2017",
+    "verbatimModuleSyntax": true
   },
-  "include": ["cookie-storage/**/*", "create-store/**/*", "index.ts", "vitest.config.mts"],
-  "exclude": ["node_modules", "dist", "build", "coverage", "examples"]
+  "exclude": ["node_modules", "dist", "build", "coverage", "examples"],
+  "include": ["cookie-storage/**/*", "create-store/**/*", "index.ts", "vitest.config.mts", "vitest.setup.ts", "tsup.config.ts",]
 }
