fix: update linting scripts to use eslint directly for consistency

--- a/package.json
+++ b/package.json
@@ -86,9 +86,8 @@
     "commit": "git add .",
     "coverage": "vitest run --coverage --typecheck",
     "dry-run": "npm publish --dry-run --no-git-checks",
-    "eslint": "eslint --fix .",
     "first-release": "standard-changelog --first-release",
-    "lint": "biome lint --write .",
+    "lint": "eslint --fix .",
     "major": "npm version major",
     "minor": "npm version minor",
     "package": "npm publish --access public",
@@ -96,7 +95,7 @@
     "postbundle": "npm run check-exports",
     "postpack": "git push",
     "postpublish": "git push --tags",
-    "posttest": "npm run eslint",
+    "posttest": "npm run lint",
     "postversion": "npm run package",
     "pre-major": "npm version premajor",
     "pre-minor": "npm version preminor",
