--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@arethetypeswrong/cli": "^0.18.2",
     "@biomejs/biome": "^1.9.4",
     "@eslint-react/eslint-plugin": "^1.52.2",
+    "@ibnlanre/clone": "^0.2.0",
     "@stylistic/eslint-plugin": "^4.4.1",
     "@tailwindcss/vite": "^4.1.11",
     "@testing-library/dom": "^10.4.0",
@@ -82,6 +83,7 @@
   },
   "scripts": {
     "bundle": "tsup --config tsup.config.ts",
+    "watch": "tsup --config tsup.config.ts --watch",
     "check-exports": "attw --pack .",
     "commit": "git add .",
     "coverage": "vitest run --coverage --typecheck",
