feat: add createContextStore for context-based state management
fix: update clone usage in createPrimitiveStore to avoid unnecessary cloning

refactor: improve resolveSegment utility for better key resolution

refactor: enhance resolveSelectorValue to clone state before applying selector

test: add unit tests for resolveSelectorValue utility

fix: update deep-partial type import path

test: add tests for InferType utility to ensure correct type inference

fix: update store-value-resolver test imports for consistency

chore: update eslint configuration for TypeScript resolver

fix: reorder imports in indexeddb-with-dexie example for clarity

chore: update Vite configuration for consistency

feat: export createContextStore from main index file

chore: bump @ibnlanre/clone package version and update React types

chore: update pnpm lockfile for dependency changes

chore: update TypeScript configuration for improved compatibility

chore: adjust Vitest configuration for logging and reporting

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "emitDeclarationOnly": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
+    "jsx": "preserve",
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "module": "ES2022",
     "moduleResolution": "node",
@@ -24,9 +25,9 @@
     "skipLibCheck": true,
     "strict": true,
     "strictNullChecks": true,
-    "target": "ES2017",
+    "target": "ES2024",
     "verbatimModuleSyntax": true
   },
   "exclude": ["node_modules", "dist", "build", "coverage", "examples"],
-  "include": ["cookie-storage/**/*", "create-store/**/*", "index.ts", "vitest.config.mts", "vitest.setup.ts", "tsup.config.ts",]
+  "include": ["cookie-storage/**/*", "create-store/**/*", "**/*.ts", "**/*.tsx", "vitest.config.mts", "vitest.setup.ts", "tsup.config.ts",]
 }
