--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^24.0.3",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
