--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@arethetypeswrong/cli": "^0.18.2",
     "@biomejs/biome": "^1.9.4",
     "@eslint-react/eslint-plugin": "^1.52.2",
-    "@ibnlanre/clone": "^0.3.0",
+    "@ibnlanre/clone": "^0.4.0",
     "@stylistic/eslint-plugin": "^4.4.1",
     "@tailwindcss/vite": "^4.1.11",
     "@testing-library/dom": "^10.4.0",
@@ -39,6 +39,7 @@
     "eslint-plugin-storybook": "^9.0.11",
     "globals": "^16.2.0",
     "happy-dom": "^18.0.1",
+    "klona": "^2.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "standard-changelog": "^7.0.1",
