--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "forceConsistentCasingInFileNames": true,
     "jsx": "react-jsx",
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "module": "ES2022",
+    "module": "es2022",
     "moduleResolution": "node",
     "noImplicitAny": true,
     "noImplicitReturns": true,
