--- a/package.json
+++ b/package.json
@@ -111,5 +111,8 @@
     "typecheck": "tsc --pretty --noEmit",
     "version": "npm run commit"
   },
-  "version": "5.1.2"
+  "version": "5.1.2",
+  "dependencies": {
+    "@ibnlanre/clone": "^0.5.1"
+  }
 }
