--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@arethetypeswrong/cli": "^0.18.2",
     "@biomejs/biome": "^1.9.4",
     "@eslint-react/eslint-plugin": "^1.52.2",
+    "@ibnlanre/clone": "^0.5.1",
     "@stylistic/eslint-plugin": "^4.4.1",
     "@tailwindcss/vite": "^4.1.11",
     "@testing-library/dom": "^10.4.0",
@@ -111,8 +112,5 @@
     "typecheck": "tsc --pretty --noEmit",
     "version": "npm run commit"
   },
-  "version": "5.2.0",
-  "dependencies": {
-    "@ibnlanre/clone": "^0.5.1"
-  }
+  "version": "5.2.0"
 }
