fix: correct DOCTYPE declaration and update browserslist in package.json

--- a/examples/indexeddb-with-dexie/package.json
+++ b/examples/indexeddb-with-dexie/package.json
@@ -1,4 +1,10 @@
 {
+   "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
   "dependencies": {
     "@ibnlanre/portal": "workspace:*",
     "dexie": "^4.0.11",
